compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_constructor_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(\"pub type Box { Box(Int) }\npub fn main() {\n    let Box(fooBar) = Box(203)\n}\",\n    2)"
---
pub type Box { Box(Int) }
pub fn main() {
    let Box(foo_bar) = Box(203)
}
