compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_constructor_pattern_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(code, 2)"
---
pub type Box { Box(Int) }
pub fn main() {
    let Box(_ignored_inner) = Box(203)
}
