compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_parameter.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(code, 0)"
---
fn add(num_a: Int, num_b: Int) { numA + num_b }
