compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_parameter_label2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(code, 0)"
---
fn ignore(this_is_a_label _ignore: Int) { 25 }
